--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="no-gutters row">
                 <div class="col-12 navbar-nav text-center toll-number">
                     <span class="align-items-center bg_color_primary_light d-flex justify-content-center p-2 text-white toll-number">
-            U.S.A Toll-Free&nbsp;&nbsp;&nbsp;&nbsp;<a href="tel:+18002750050">1.800.275.0050</a>&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/tested_tried_true.png" alt="" class="tested_tried_true-logo"/> </span>
+            TEL:&nbsp;&nbsp;<a href="tel:+551156414037">+55 11-5641-4037</a>&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/tested_tried_true.png" alt="" class="tested_tried_true-logo"/> </span>
                 </div>
             </div>
             <div class="no-gutters row">
