--- a/index.html
+++ b/index.html
@@ -23,31 +23,30 @@
     <body>
         <nav class="bbi-nav-background bg_color_primary d-flex justify-content-between navbar navbar-dark navbar-expand-lg sticky-top">
             <div class="no-gutters row">
-                <div class="col-12 navbar-nav text-center toll-number"><span class="align-items-center bg_color_primary_light d-flex justify-content-center p-2 text-white toll-number">
+                <div class="col-12 navbar-nav text-center toll-number">
+                    <span class="align-items-center bg_color_primary_light d-flex justify-content-center p-2 text-white toll-number">
             TEL:&nbsp;&nbsp;<a href="tel:+5511-5641-4037">+55 11-5641-4037</a>&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/tested_tried_true.png" alt="" class="tested_tried_true-logo"/> </span>
                 </div>
             </div>
             <div class="no-gutters row">
-                <div class="d-flex text-center"><a class="navbar-brand text-white brand_name" href="https://www.brightonbest.com.br/"><img src="images/BBI_home_top.png" alt="" class="bbi-logo img-fluid"/></a>
+                <div class="d-flex text-center">
+                    <a class="navbar-brand text-white brand_name" href="https://www.brightonbest.com.br/"><img src="images/BBI_home_top.png" alt="" class="bbi-logo img-fluid"/></a>
                 </div>
             </div>
-            <button class="navbar-toggler ml-auto align-items-end" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler ml-auto align-items-end" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="bbi-menu-links collapse ml-auto navbar-collapse" id="navbarNavDropdown">
-                <div class="bbi-nav-link navbar-nav"><a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/">Home</a>
-                    <a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/about.html">Quem Somos</a>
-                    <a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/laboratory.html">Laboratório</a>
-                    <a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/catalogs.html">Catálogo</a>
-                    <a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/industrylinks.html">Indústria Links</a>
-                    <a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/Careers.html">Carreira</a>
-                    <a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/contact.html">Contato</a>
+                <div class="bbi-nav-link navbar-nav">
+                    <a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/">Home</a><a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/about.html">Quem Somos</a><a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/laboratory.html">Laboratório</a><a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/catalogs.html">Catálogo</a><a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/industrylinks.html">Indústria Links</a><a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/Careers.html">Carreira</a><a class="hover-underline-animation nav-item nav-link" href="https://www.brightonbest.com.br/contact.html">Contato</a>
                 </div>
             </div>
         </nav>
         <hr class="gold-bar"/>
         <section data-pg-name="History Timeline" class="timeline-carousel">
             <div class="no-gutters row">
-                <div class="col-12 text-right toll-number"><a href="https://www.brightonbest.com/"><i class="fa-long-arrow-alt-left fas"></i>&nbsp;&nbsp;Back</a>
+                <div class="col-12 text-right toll-number">
+                    <a href="https://www.brightonbest.com.br/"><i class="fa-long-arrow-alt-left fas"></i>&nbsp;&nbsp;Back</a>
                 </div>
             </div>
             <h1>Linha do tempo da história</h1>
@@ -60,7 +59,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1925</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1925</span>
                         <p>Brighton-Best operando desde 1925</p>
                     </div>
                 </div>
@@ -71,7 +71,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1950</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1950</span>
                         <p>
               Parafusos sextavado interno Inox é introduzido para comemorar 25
               anos de atividade </p>
@@ -84,7 +85,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1971</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1971</span>
                         <p>
               Brighton-Best Socket Screw é estabelecida através da união da Best
               Socket Screw e da Brighton Socket Screw Manufacturing </p>
@@ -109,7 +111,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1972</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1972</span>
                         <p>Brighton-Best abre em Toronto , Canada</p>
                     </div>
                 </div>
@@ -120,7 +123,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1975</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1975</span>
                         <p>
               Brighton-Best expandiu para 12 centros de distribuições nos
               Estados Unidos </p>
@@ -145,7 +149,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1980</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1980</span>
                         <p>BBS - Operação do galpão</p>
                     </div>
                 </div>
@@ -156,7 +161,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1982</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1982</span>
                         <p>
               Brighton - Best ganhou o primeiro campeonato de Basquete na Feira
               de Fixadores </p>
@@ -169,7 +175,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1983</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1983</span>
                         <p>
               Brighton-Best reunião de vendas no escritório corporativo em
               Atlanta </p>
@@ -182,7 +189,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1987</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1987</span>
                         <p>
               Perry Rosenstein - Brighton Socket Screw Mfg. foi introduzido no
               Hall da Fama dos Fixadores </p>
@@ -195,7 +203,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1988</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1988</span>
                         <p>BBS evento de inauguração no novo galpão em Swedesboro, NJ</p>
                     </div>
                 </div>
@@ -206,7 +215,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1989</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1989</span>
                         <p>
               Sr. Robert Shieh fundou a Ta Chen International, Inc., como
               distribuidora principal nos EUA na linha de tubos, chapas,
@@ -221,7 +231,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1992</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1992</span>
                         <p>BBS - compra os ativos da IMAVI e abre o BBS no Reino Unido</p>
                     </div>
                 </div>
@@ -232,7 +243,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1993</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1993</span>
                         <p>Brighton Best Socket Screws abre na Australia</p>
                     </div>
                 </div>
@@ -244,7 +256,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1995</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1995</span>
                         <p>BBS torna-se credenciado pela A2LA</p>
                     </div>
                 </div>
@@ -267,7 +280,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">1996</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">1996</span>
                         <p>BBS recebe a Certificação para ISO 9002</p>
                     </div>
                 </div>
@@ -290,7 +304,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2002</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2002</span>
                         <p>Brighton Best Socket Screw adquire a Socket Screw supply</p>
                     </div>
                 </div>
@@ -301,7 +316,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2005</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2005</span>
                         <p>
               BBS expande para mais de 3000 metros quadrados em Toronto, canada </p>
                     </div>
@@ -313,7 +329,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2007</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2007</span>
                         <p>
               BBS expandi para 32 localizações pelo mundo com presença nos
               Estados Unidos, Canada,Reino Unido, Brazil, Austrália e Nova
@@ -327,7 +344,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2008</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2008</span>
                         <p>
               Brighton- Best socket Screw foi comprada por um consórcio de
               investidores de Taiwan liderado pelo Sr. Robert Shieh </p>
@@ -340,7 +358,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2009</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2009</span>
                         <p>
               BBS expande para mais de 3000 metros quadrados em Vancouver,
               Canada </p>
@@ -353,7 +372,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2010</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2010</span>
                         <p>BBS expande para mais de 6000 metros quadrados no Reino Unido</p>
                     </div>
                 </div>
@@ -364,7 +384,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2013</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2013</span>
                         <p>BBI concluí a aquisição da Porteous Fastener Company (PFC)</p>
                     </div>
                 </div>
@@ -375,7 +396,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2015</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2015</span>
                         <p>
               BBI adquire a Socket Screws na Austrália e Ez Sockets nos Estados
               Unidos. </p>
@@ -401,7 +423,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2017</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2017</span>
                         <p>
               BBI também concluiu a aquisição da Koala Nails na Austrália e da
               Ironclad Performance Wear nos EUA </p>
@@ -428,7 +451,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2019</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2019</span>
                         <p>
               Clean Fit, líder em luvas de nitrílica, foi adquirida, expandindo
               os EPIs e consumíveis de segurança da BBI </p>
@@ -455,7 +479,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2020</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2020</span>
                         <p>
               BBI expande para mais de 15000 metros quadrados em Toronto, Canada </p>
                     </div>
@@ -467,7 +492,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2021</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2021</span>
                         <p>
               BBI completa a aquisição da Vertex Distribution. Esta aquisição
               expandiu a linha de produtos de braçadeiras de mangueira de
@@ -482,7 +508,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2022</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2022</span>
                         <p>
               A BBI adquiriu a Grattan Fastening Products, fornecedora de
               fixadores para canais de distribuição de ferragens e madeira </p>
@@ -509,7 +536,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2023</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2023</span>
                         <p>BBI expande para 10.000 metro quadrados na Inglaterra</p>
                     </div>
                 </div>
@@ -520,7 +548,8 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2024</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2024</span>
                         <p>
               BBI muda-se de Vancouver para Edmonton, Alberta, Canadá, para uma
               instalação de 15.000 metro quadrados </p>
@@ -545,14 +574,14 @@
                 background-size: cover;
               "></div>
                     </div>
-                    <div class="timeline-carousel__item-inner"><span class="year">2025</span>
+                    <div class="timeline-carousel__item-inner">
+                        <span class="year">2025</span>
                         <p>BBI comemora o aniversário de 100 anos de história</p>
                     </div>
                 </div>
             </div>
-        </section><br/>
-        <br/>
-        <br/>
+        </section>
+        <br/><br/><br/>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
